<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_master_driver</name>
  <version>0.0.0</version>
  <description>Basic canopen master implementation</description>
  <maintainer email="christoph.hellmann.santos@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
