<?xml version="1.0"?>
<package format="2">
  <name>canopen_motor_node</name>
  <version>0.6.4</version>
  <description>This package extends the canopen_chain_node with specialized handling for canopen_402 devices. It facilitates interface abstraction with ros_control.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/canopen_motor_node</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>canopen_402</depend>
  <depend>canopen_chain_node</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>filters</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>muparser</depend>
  <depend>urdf</depend>

</package>
