<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_proxy_driver</name>
  <version>0.0.1</version>
  <description>Simple proxy driver for the ros2_canopen stack</description>
  <maintainer email="christoph.hellmann.santos@ipa.fraunhofer.de">christoph</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>canopen_base_driver</depend>
  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
