<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_ros2_control</name>
  <version>0.0.1</version>
  <description>ros2_control wrapper for ros2_canopen functionalities</description>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
  <maintainer email="denis.stogl@stoglrobotics.de">Denis Stogl</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>canopen_core</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>

  <depend>xacro</depend>
  <depend>joint_state_broadcaster</depend>

  <exec_depend>canopen_fake_slaves</exec_depend>
  <exec_depend>canopen_tests</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
